Cleaned up blog styling. FIxed double scrollbar issue with lightbox.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -14,6 +14,7 @@ body {
   font-family: 'Raleway', sans-serif;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 h1, h2, h3, h4, p {
   padding: 10px 0;
@@ -28,6 +29,9 @@ img {
 }
 .clear {
   clear: both;
+}
+.hidden {
+  display: none;
 }
 // Nav
 // ***
@@ -99,21 +103,20 @@ textarea {
   padding-top: 10px;
   .title {
     font-size: 1.2em;
-    padding-left: 90px;
-    height: 50px;
+    padding: 10px 10px 10px 90px;
+    min-height: 60px;
     position: relative;
     border: 1px solid $c-border;
     border-left: 0;
-    width: 60%;
     background: #eee;
     .date {
       position: absolute;
-      top: 2px;
+      top: 5px;
       left: 0;
       text-align: center;
       padding: 2px;
       width: 70px;
-      height: 42px;
+      height: calc(100% - 10px);
       border-right: 1px solid $c-border;
       .day {
         font-size: 1.3em;
@@ -123,12 +126,15 @@ textarea {
       }
     }
     .text {
-      line-height: 50px;
+      min-height: 60px;
+      display: flex;
+      align-items: center;
+      word-break: break-all;
     }
   }
   .image {
     padding: 10px;
-    text-align: center;
+    float: right;
   }
   > .text {
     padding: 0 20px;
@@ -158,4 +164,12 @@ textarea {
       display: inline-block;
     }
   }
+}
+// Lightbox
+// ********
+#lightbox {
+  top: 0 !important;
+  height: 100%;
+  overflow: auto;
+  padding: 40px;
 }
